main/default/objects/Rating_Reference_Name__c/Rating_Reference_Name__c.object-meta.xml
<CustomObject>
    <label>Rating Reference Name</label>
    <nameField>
        <displayFormat>RRN-{0000}</displayFormat>
        <label>Rating Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rating Reference Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>