main/default/objects/Rating_Reference_Name__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Rating Reference Names</relationshipLabel>
    <relationshipName>Rating_Reference_Names</relationshipName>
    <type>Lookup</type>
</CustomField>