main/default/objects/Rating_Reference_Name__c/fields/Rating_Reference_Name_Id__c.field-meta.xml
<CustomField>
    <fullName>Rating_Reference_Name_Id__c</fullName>
    <externalId>true</externalId>
    <label>Rating Reference Name Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>