main/default/objects/Rating_Reference_Name__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Id__c</columns>
    <columns>Reference_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>